--- a/flask_ejemplo/templates/index.html
+++ b/flask_ejemplo/templates/index.html
@@ -1,12 +1,21 @@
-<html>
-    <head>
-        <title>{{ title }}</title>
-    </head>
-    <body>
-        <ul>
-        {% for member in members: %}
-        <li>{{ member }}</li>
-	{% endfor %}
-	</ul>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Compra un comic</title>
+</head>
+<body>
+    <form action="http://localhost:5000/" method="post">
+       
+        <p>Please, write your comic and volume.</p>
+       
+        <p><input type="text" name="comic" /></p>
+        <p><input type="text" name="volume" /></p>
+        <p><input type="submit" name="submit" /></p>
+    
+    
+    </form>
+</body>
 </html>
